--- a/w5.css
+++ b/w5.css
@@ -31,6 +31,8 @@ body {
     font-family: var(--font-body-w5);
     overflow-x: hidden;
     cursor: none;
+    margin: 0;
+    padding: 0;
     /* Custom Cursor */
 }
 
